welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: reassignment to val
	nbBD = nbBD + 1
             ^